test/iptables
# Generated by iptables-save v1.8.4 on Thu Jun  3 17:17:45 2021
*security
:INPUT ACCEPT [448258:248132102]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [616741:385502941]
COMMIT
# Completed on Thu Jun  3 17:17:45 2021
# Generated by iptables-save v1.8.4 on Thu Jun  3 17:17:45 2021
*raw
:PREROUTING ACCEPT [99181:17304378]
:OUTPUT ACCEPT [110381:39103851]
COMMIT
# Completed on Thu Jun  3 17:17:45 2021
# Generated by iptables-save v1.8.4 on Thu Jun  3 17:17:45 2021
*filter
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT ACCEPT [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4017 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2443:2453 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 32768:65535 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -m set -j ACCEPT  --match-set whitelist dst
# Limiter goes down here
-A OUTPUT -m owner --uid-owner example -j REJECT
COMMIT
# Completed on Thu Jun  3 17:17:45 2021
# Generated by iptables-save v1.8.4 on Thu Jun  3 17:17:45 2021
*mangle
:PREROUTING ACCEPT [99181:17304378]
:INPUT ACCEPT [99181:17304378]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [110381:39103851]
:POSTROUTING ACCEPT [110371:39103375]
COMMIT
# Completed on Thu Jun  3 17:17:45 2021
# Generated by iptables-save v1.8.4 on Thu Jun  3 17:17:45 2021
*nat
:PREROUTING ACCEPT [6567:425244]
:INPUT ACCEPT [6110:398734]
:POSTROUTING ACCEPT [26362:1872105]
:OUTPUT ACCEPT [26372:1872581]
COMMIT
# Completed on Thu Jun  3 17:17:45 2021
